# Indoor-Object-Detection-Dataset

./: .gitignore  README.md  indoor_object_detection_yolo.ipynb  pyproject.toml
docu_sketch/: __init__.py  indoor_dataset.py
src/indoor_object_detection/: __init__.py  dataset.py  evaluate.py  plotting.py  py.typed  train.py
tests/: test_dataset.py  test_evaluate.py  test_train_mlflow.py
